[gd_scene load_steps=35 format=3 uid="uid://5nsifwmqpylr"]

[ext_resource type="Texture2D" uid="uid://c5vsxesaxt1tj" path="res://MysticForest/assets/characters/player/CharacterBody2D.png" id="1_hb7ha"]
[ext_resource type="Script" uid="uid://dxt58kjofywdb" path="res://MysticForest/scripts/player_1.gd" id="1_xguq6"]
[ext_resource type="Texture2D" uid="uid://cq6isu7cjwnyb" path="res://MysticForest/assets/characters/player/Walk right/Character walk right1.png" id="2_xguq6"]
[ext_resource type="Texture2D" uid="uid://dmfagyxcoufuw" path="res://MysticForest/assets/characters/player/Walk right/Character walk right2.png" id="3_0mt38"]
[ext_resource type="Texture2D" uid="uid://b2k565m4hbol7" path="res://MysticForest/assets/characters/player/Walk down/player walking straight1.png" id="3_ry5dv"]
[ext_resource type="Texture2D" uid="uid://b5bj5pl7tykl4" path="res://MysticForest/assets/characters/player/Walk right/Character walk right3.png" id="4_24cm5"]
[ext_resource type="Texture2D" uid="uid://db5kpwvh1nyr6" path="res://MysticForest/assets/characters/player/Walk down/player walking straight2.png" id="4_61gx7"]
[ext_resource type="Texture2D" uid="uid://bpnlney8b2khs" path="res://MysticForest/assets/characters/player/Walk down/player walking straight3.png" id="5_728py"]
[ext_resource type="Texture2D" uid="uid://b4iip4pbo22m5" path="res://MysticForest/assets/characters/player/Walk right/Character walk right4.png" id="5_h5imq"]
[ext_resource type="Texture2D" uid="uid://d08rfgd0qnid3" path="res://MysticForest/assets/characters/player/Walk right/Character walk right5.png" id="6_ftc8y"]
[ext_resource type="Texture2D" uid="uid://dansbss3cq1j6" path="res://MysticForest/assets/characters/player/Walk down/player walking straight4.png" id="6_ntfov"]
[ext_resource type="Texture2D" uid="uid://cujgkwgrgpqin" path="res://MysticForest/assets/characters/player/Walk down/player walking straight5.png" id="7_ji32m"]
[ext_resource type="Texture2D" uid="uid://0yx2gv7h035y" path="res://MysticForest/assets/characters/player/Walk right/Character walk right6.png" id="7_khrvs"]
[ext_resource type="Texture2D" uid="uid://l8b13m2e15kp" path="res://MysticForest/assets/characters/player/Walk down/player walking straight6.png" id="8_il5bp"]
[ext_resource type="Texture2D" uid="uid://r4007k53vpuw" path="res://MysticForest/assets/characters/player/Walk right/Character walk right7.png" id="8_u3ga8"]
[ext_resource type="Texture2D" uid="uid://bausowsj23m00" path="res://MysticForest/assets/characters/player/Walk right/Character walk right8.png" id="9_tavxa"]
[ext_resource type="Texture2D" uid="uid://dcecalx6pt3vw" path="res://MysticForest/assets/characters/player/Walk down/player walking straight7.png" id="9_xdas2"]
[ext_resource type="Texture2D" uid="uid://bhoctdtqclnps" path="res://MysticForest/assets/characters/player/Walk down/player walking straight8.png" id="10_3j2bd"]
[ext_resource type="Texture2D" uid="uid://dctccsetscfty" path="res://MysticForest/assets/characters/player/Walk left/Character walk left1.png" id="10_bk6ln"]
[ext_resource type="Texture2D" uid="uid://bi1mho7mjx2wg" path="res://MysticForest/assets/characters/player/Walk down/player walking straight9.png" id="11_011xo"]
[ext_resource type="Texture2D" uid="uid://b5iklaigc8s5f" path="res://MysticForest/assets/characters/player/Walk left/Character walk left2.png" id="11_cc37w"]
[ext_resource type="Texture2D" uid="uid://ckd2hmd6ehd0l" path="res://MysticForest/assets/characters/player/Walk left/Character walk left3.png" id="12_6ae3v"]
[ext_resource type="Texture2D" uid="uid://cbk30smairbl8" path="res://MysticForest/assets/characters/player/Walk down/player walking straight10.png" id="12_288fp"]
[ext_resource type="Texture2D" uid="uid://bmg2hxrel7s5f" path="res://MysticForest/assets/characters/player/Walk left/Character walk left4.png" id="13_hnhln"]
[ext_resource type="Texture2D" uid="uid://fbbndqyoomef" path="res://MysticForest/assets/characters/player/Walk left/Character walk left5.png" id="14_omp70"]
[ext_resource type="Texture2D" uid="uid://d0swflldfdxvd" path="res://MysticForest/assets/characters/player/Walk left/Character walk left6.png" id="15_npt4g"]
[ext_resource type="Texture2D" uid="uid://cnm01gyqe0ear" path="res://MysticForest/assets/characters/player/Walk left/Character walk left7.png" id="16_siht6"]
[ext_resource type="Texture2D" uid="uid://ctxkcwk54bn8q" path="res://MysticForest/assets/characters/player/Walk left/Character walk left8.png" id="17_yu360"]
[ext_resource type="Texture2D" uid="uid://bgm2o0nvmfg8b" path="res://MysticForest/assets/characters/player/Walk up/Character walk up1.png" id="19_h5imq"]
[ext_resource type="Texture2D" uid="uid://b1eiiuu2kitxr" path="res://MysticForest/assets/characters/player/Walk up/Character walk up2.png" id="20_ftc8y"]
[ext_resource type="Texture2D" uid="uid://bmx5saefs8g5f" path="res://MysticForest/assets/characters/player/Walk up/Character walk up3.png" id="21_khrvs"]
[ext_resource type="PackedScene" uid="uid://bmumalc1gxqm4" path="res://MysticForest/scenes/TechnicalElements/attunement_overlay.tscn" id="24_u3ga8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_riycg"]
size = Vector2(202, 74)

[sub_resource type="SpriteFrames" id="SpriteFrames_6rosy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hb7ha")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ry5dv")
}, {
"duration": 1.0,
"texture": ExtResource("4_61gx7")
}, {
"duration": 1.0,
"texture": ExtResource("5_728py")
}, {
"duration": 1.0,
"texture": ExtResource("6_ntfov")
}, {
"duration": 1.0,
"texture": ExtResource("7_ji32m")
}, {
"duration": 1.0,
"texture": ExtResource("8_il5bp")
}, {
"duration": 1.0,
"texture": ExtResource("9_xdas2")
}, {
"duration": 1.0,
"texture": ExtResource("10_3j2bd")
}, {
"duration": 1.0,
"texture": ExtResource("11_011xo")
}, {
"duration": 1.0,
"texture": ExtResource("12_288fp")
}],
"loop": true,
"name": &"walk_down",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xguq6")
}, {
"duration": 1.0,
"texture": ExtResource("3_0mt38")
}, {
"duration": 1.0,
"texture": ExtResource("4_24cm5")
}, {
"duration": 1.0,
"texture": ExtResource("5_h5imq")
}, {
"duration": 1.0,
"texture": ExtResource("6_ftc8y")
}, {
"duration": 1.0,
"texture": ExtResource("7_khrvs")
}, {
"duration": 1.0,
"texture": ExtResource("8_u3ga8")
}, {
"duration": 1.0,
"texture": ExtResource("9_tavxa")
}],
"loop": true,
"name": &"walk_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_bk6ln")
}, {
"duration": 1.0,
"texture": ExtResource("11_cc37w")
}, {
"duration": 1.0,
"texture": ExtResource("12_6ae3v")
}, {
"duration": 1.0,
"texture": ExtResource("13_hnhln")
}, {
"duration": 1.0,
"texture": ExtResource("14_omp70")
}, {
"duration": 1.0,
"texture": ExtResource("15_npt4g")
}, {
"duration": 1.0,
"texture": ExtResource("16_siht6")
}, {
"duration": 1.0,
"texture": ExtResource("17_yu360")
}],
"loop": true,
"name": &"walk_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_h5imq")
}, {
"duration": 1.0,
"texture": ExtResource("20_ftc8y")
}, {
"duration": 1.0,
"texture": ExtResource("21_khrvs")
}],
"loop": true,
"name": &"walk_up",
"speed": 8.0
}]

[node name="Player1" type="CharacterBody2D" groups=["player"]]
collision_layer = 3
collision_mask = 7
script = ExtResource("1_xguq6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(586, 572)
shape = SubResource("RectangleShape2D_riycg")

[node name="Player" type="AnimatedSprite2D" parent="."]
position = Vector2(581, 301)
scale = Vector2(1.01875, 1.01406)
sprite_frames = SubResource("SpriteFrames_6rosy")
animation = &"walk_down"

[node name="Attunement_Overlay" parent="." instance=ExtResource("24_u3ga8")]
layer = 2

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
